// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCard renders correct snapshot 1`] = `
<div
  className="DescribeElementCard-shadedCard-2"
>
  <div
    className="DescribeElementCard-cardContentWrapper-3"
  >
    <WithStyles(DescribeElementCardBanner)
      icon="people"
      key="card-banner"
      title="expectedTitle"
    />
    <WithStyles(DescribeElementCardBody)
      content="expectedContent"
      key="card-body"
    />
  </div>
</div>
`;

exports[`DescribeElementCard renders correct snapshot with switches 1`] = `
<div
  className="DescribeElementCard-card-1"
>
  <div
    className="DescribeElementCard-quoteCardContentWrapper-4"
  >
    <WithStyles(DescribeElementCardBody)
      content="moreContent"
      key="card-body"
      media={true}
      quote={true}
    />
    <WithStyles(DescribeElementCardBanner)
      key="card-banner"
      quote={true}
      title="expectedTitle"
    />
    <DescribeElementCardLinks
      key="card-links"
      links={
        Array [
          Object {
            "displayName": "displayName",
            "href": "address",
          },
        ]
      }
    />
  </div>
</div>
`;
